Ajustes para csnuser

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -39,10 +39,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- Tile icon for Win8 (144x144) -->
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <link rel="stylesheet" href="/styles/main.css">
+    <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
 </head>
-    <body unresolved class="fullbleed layout vertical">
+    <body class="fullbleed layout vertical">
         
             <?php echo $this->content; ?>
         
