ajustes y agregados para template

--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -7,7 +7,7 @@
 	}
 </style>
 <div id="divlogin">
-	<login-polyform on-login="handleLogin" credentials="{{_user}}">
+	<login-polyform on-login="handleLogin" credentials="{{_user}}" mensaje="<?php echo $mensaje; ?>">
       <img avatar src="https://randomuser.me/api/portraits/med/women/27.jpg"/>
     </login-polyform>
 </div>
