--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -7,10 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
-    
-    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout.html">
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 </head>
-<body>    
+<body horizontal class="fullbleed layout horizontal">    
     <?php echo $this->content; ?>
 </body>
 </html>
