cambio a las rutas

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -6,9 +6,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout.html">
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="import" href="/polymer/bower_components/iron-flex-layout/iron-flex-layout.html">
+    <script src="/polymer/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 </head>
 <body horizontal class="fullbleed layout horizontal">    
     <?php echo $this->content; ?>
